# Fighting-game

./: .gitignore  CMakeLists.txt  README.md
Sprites/: HP_bar.aseprite
Sprites/Action_sprites/: tys_tys.aseprite
Sprites/Backgrounds/: Office_scene.aseprite
Sprites/Fighters/: frajer_fajter.aseprite  pierwszy_fajter.aseprite
Sprites/HP_bar/: HP_bar.aseprite
Sprites/Layout/: BauckiFajter_layout_base_project.ase
Sprites/rekawice/: rekawice.aseprite
src/: ActionSprite.cpp  ActionSprite.hpp  Background.cpp  Background.hpp  Camera.cpp  Camera.hpp  Enemy.cpp  Enemy.hpp  GameLoop.cpp  GameLoop.hpp  Glove.cpp  Glove.hpp  HpBar.cpp  HpBar.hpp  PlayAgain.cpp  PlayAgain.hpp  Player.cpp  Player.hpp  Shield.cpp  Shield.hpp  main.cpp
